# serial-x

./: .gitignore  README.md  apllication.yuml  package-lock.json  package.json
src/: index.html  main.js  package-lock.json  package.json  style.css
src-tauri/: Cargo.toml  log4rs.yaml  tauri.conf.json
src-tauri/config/: log4rs.yaml
src-tauri/src/: main.rs  serialport.rs  serialx.rs  util.rs
src/js/: icon.js  init.js  page-roll.js  sidebar.js  sound.js  theme-switch.js
src/js/app/: index.js  init.js  util.js
src/js/app/services/: port.js
src/js/components/: index.js  on-off.js  overlay.js  page-roll.js  port-list.js  port-property.js  port-scanner.js  port-table.js  port-view.js  settings.js  side-panel.js  sidebar.js  status-bar-item.js  status-bar.js  theme-switch.js  toggle.js
src/js/components/port/: index.js  port-card.js  port-cards.js  port-data-view.js  port-gateway.js  port-menu.js  port-table.js  port-view.js
src/js/components/port-options/: baud-rate.js  data-bits.js  flow-ctrl.js  index.js  initial-line-state.js  parity-type.js  port-gateway.js  port-option.js  port-options.js  port-property.js  software-flow-control.js  stop-bits.js
src/js/services/: port.js
src/pages/: settings.html
src/styles/: animations.css  elemetns.css  index.css  modifiers.css  typo.css
src/styles/themes/: dark-theme.css  dark-violet-theme.css  index.css  light-theme.css
