[package]
name = "serial-x"
version = "0.1.0"
description = "Serial port explorer, logger, decoder, and more"
authors = ["josiphaboic@gmail.com"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.2.1", features = [] }

[dependencies]
serde_json = "1.0.93"
serde = { version = "1.0.152", features = ["derive"] }
tauri = { version = "1.2.4", features = ["shell-open", "window-close", "window-hide", "window-maximize", "window-minimize", "window-print", "window-request-user-attention", "window-set-always-on-top", "window-set-fullscreen", "window-set-position", "window-set-resizable", "window-set-size", "window-show", "window-unmaximize", "window-unminimize"] }
mio = "0.8.6"
log = "0.4.17"
mio-serial = "5.0.5"
log4rs = { version="1.2.0", features = ["gzip"] }

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = ["custom-protocol"]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = ["tauri/custom-protocol"]
